@@ -59,7 +59,7 @@ my $source_packs = [
   {
     title   => "Source code build: SDL-1.2.14 & co. (RECOMMENDED)\n" .
                "\tbuilds: SDL, SDL_(image|mixer|ttf|net|gfx|Pango)\n" .
-               "\tneeds preinstalled: (freetype2|pango)-devel\n",
+               "\tneeds preinstalled: (freetype2|pango)-devel",
     prereqs => {
         libs => [
           'pthread', # SDL
@@ -116,6 +116,96 @@ my $source_packs = [
           'http://froggs.de/libpng/libpng-1.4.1.tar.gz',
         ],
         sha1sum  => '7a3488f5844068d67074f2507dd8a7ed9c69ff04',
+      },
+      {
+        pack => 'SDL_image',
+        dirname => 'SDL_image-1.2.10',
+        url => [
+          'http://www.libsdl.org/projects/SDL_image/release/SDL_image-1.2.10.tar.gz',
+          'http://froggs.de/libsdl/SDL_image-1.2.10.tar.gz',
+        ],
+        sha1sum  => '6bae71fdfd795c3dbf39f6c7c0cf8b212914ef97',
+        patches => [ ],
+      },
+      {
+        pack => 'SDL_mixer',
+        dirname => 'SDL_mixer-1.2.11',
+        url => [
+          'http://www.libsdl.org/projects/SDL_mixer/release/SDL_mixer-1.2.11.tar.gz',
+          'http://froggs.de/libsdl/SDL_mixer-1.2.11.tar.gz',
+        ],
+        sha1sum  => 'ef5d45160babeb51eafa7e4019cec38324ee1a5d',
+        patches => [ ],
+      },
+      {
+        pack => 'SDL_ttf',
+        dirname => 'SDL_ttf-2.0.10',
+        url => [
+          'http://www.libsdl.org/projects/SDL_ttf/release/SDL_ttf-2.0.10.tar.gz',
+          'http://froggs.de/libsdl/SDL_ttf-2.0.10.tar.gz',
+        ],
+        sha1sum  => '98f6518ec71d94b8ad303a197445e0991850b887',
+        patches => [ ],
+      },
+      {
+        pack => 'SDL_net',
+        dirname => 'SDL_net-1.2.7',
+        url => [
+          'http://www.libsdl.org/projects/SDL_net/release/SDL_net-1.2.7.tar.gz',
+          'http://froggs.de/libsdl/SDL_net-1.2.7.tar.gz',
+        ],
+        sha1sum  => 'b46c7e3221621cc34fec1238f1b5f0ce8972274d',
+        patches => [ ],
+      },
+      {
+        pack => 'SDL_gfx',
+        dirname => 'SDL_gfx-2.0.20',
+        url => [
+          'http://www.ferzkopp.net/Software/SDL_gfx-2.0/SDL_gfx-2.0.20.tar.gz',
+          'http://froggs.de/libsdl/SDL_gfx-2.0.20.tar.gz',
+        ],
+        sha1sum  => '077f7e64376c50a424ef11a27de2aea83bda3f78',
+        patches => [ ],
+      },
+      {
+        pack => 'SDL_Pango',
+        dirname => 'SDL_Pango-0.1.2',
+        url => [
+          'http://downloads.sourceforge.net/sdlpango/SDL_Pango-0.1.2.tar.gz',
+          'http://froggs.de/libsdl/SDL_Pango-0.1.2.tar.gz',
+        ],
+        sha1sum  => 'c30f2941d476d9362850a150d29cb4a93730af68',
+        patches => [
+          'SDL_Pango-0.1.2-API-adds.1.patch',
+          'SDL_Pango-0.1.2-API-adds.2.patch',
+        ],
+      },
+    ],
+  },
+## another src set - builds just SDL+ SDL_* libs, all other prereq libs needs to be installed 
+  {
+    title   => "Source code build: SDL-1.2.14 & co. (builds only SDL+SDL_*)\n" .
+               "\tbuilds: SDL, SDL_(image|mixer|ttf|net|gfx|Pango)\n" .
+               "\tneeds preinstalled: all non-SDL libs",
+    prereqs => {
+        libs => [
+          'pthread', # SDL
+	  'z', 'jpeg', 'tiff', 'png',
+          'pangoft2', 'pango', 'gobject', 'gmodule', 'glib', 'fontconfig', 'freetype', 'expat', # SDL_Pango
+        ]
+    },
+    members     => [
+      {
+        pack => 'SDL',
+        dirname => 'SDL-1.2.14',
+        url => [
+          'http://www.libsdl.org/release/SDL-1.2.14.tar.gz',
+          'http://froggs.de/libsdl/SDL-1.2.14.tar.gz',
+        ],
+        sha1sum  => 'ba625b4b404589b97e92d7acd165992debe576dd',
+        patches => [
+          'test1.patch',
+        ],
       },
       {
         pack => 'SDL_image',
@@ -566,7 +656,7 @@ sub check_src_build
   my @good = ();
   foreach my $p (@{$source_packs}) {
     $p->{buildtype} = 'build_from_sources';
-    print "CHECKING prereqs for:\n\t$p->{title}";
+    print "CHECKING prereqs for:\n\t$p->{title}\n";
     push @good, $p if check_prereqs($p);
   }
   return \@good;
